--- a/wp-content/themes/raro/style.css
+++ b/wp-content/themes/raro/style.css
@@ -37,7 +37,7 @@
     width: 50%
  }
 
- @media screen and (max-width: 980px){
+ @media screen and (max-width: 992px){
     .header-home .brand img{
         width: 80%;
     }
@@ -45,4 +45,53 @@
     .navbar-mobile .brand img{
         width: 40%;
     }
+ }
+
+ /* Our Team */
+ .our-team .member{
+     box-shadow: 5px 5px 15px #000;
+ }
+
+ @media screen and (max-width: 992px){
+    .our-team .member{
+        margin-top: 25px;
+    }
+ }
+
+ .our-team .team-container{
+     margin-top: 25px;
+ }
+
+ @media screen and (max-width: 992px){
+    .our-team .team-container{
+        margin-top: 0;
+    }
+ }
+
+ .our-team .member .imagen-container img{
+     width: 100%;
+     height: auto;
+ }
+
+ .our-team .member .member-content{
+     height: 100px;
+     background-color: #fff;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+ }
+
+ .our-team .member .member-content .name{
+    color: #424242;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Oswald';
+ }
+
+ .our-team .member .member-content .job{
+    color: #bab39a;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: 'Oswald';
  }
