--- a/wp-content/themes/raro/style.css
+++ b/wp-content/themes/raro/style.css
@@ -47,6 +47,12 @@
     width: 50%;
  }
 
+ @media screen and (max-width: 992px){
+    .brand-panel .brand img{
+        width: 80%;
+    }
+ }
+
  .navbar-desctop .brand img{
     width: 50%
  }
@@ -89,11 +95,11 @@
 
  .our-team .member .member-content{
      height: 100px;
-     background-color: #fff;
      display: flex;
-     justify-content: center;
      align-items: center;
+     background-color: #fff;
      flex-direction: column;
+     justify-content: center;
  }
 
  .our-team .member .member-content .name{
@@ -108,6 +114,71 @@
     font-size: 14px;
     font-weight: bold;
     font-family: 'Oswald';
+ }
+
+ /* Services */
+ .modal-container{
+    top: 0;
+    left: 0;
+    z-index: 9;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    position: fixed;
+    background-color: rgba(0, 0, 0, .5);
+ }
+
+ .modal-container .service-modal{
+    top: 5vh;
+    left: 15vw;
+    width: 70vw;
+    height: 90vh;
+    display: flex;
+    position: relative;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 5px 5px 15px #000;
+ }
+
+ @media screen and (max-width: 992px){
+    .modal-container .service-modal{
+        align-items: unset;
+    }
+ }
+
+ .modal-container .service-modal .row{
+     width: 100%;
+ }
+
+ .modal-container .service-modal .blog-thumbnail{
+     padding: 0;
+ }
+
+ .modal-container .service-modal .close-btn{
+    top: 15px;
+    right: 25px;
+    color: #fff;
+    position: absolute;
+ }
+
+ @media screen and (max-width: 992px){
+    .modal-container .service-modal .close-btn{
+        top: 10px;
+        right: 10px;
+        width: 24px;
+        display: flex;
+        font-size: 15px;
+        font-weight: bold;
+        align-items: center;
+        border-radius: 50px;
+        justify-content: center;
+        background-color: rgba(0, 0, 0, .5);
+    }
+ }
+
+ .modal-container .service-modal .close-btn:hover{
+     text-decoration: unset;
  }
 
  /* No home header */
@@ -137,4 +208,22 @@
 
  .blog-details article.post{
      padding: 0 15px;
+ }
+
+ .navigation.pagination .nav-links a{
+    color: #b60101;
+ }
+
+ .navigation.pagination .nav-links .page-numbers{
+     margin: 0 5px;
+ }
+
+ @media screen and (max-width: 992px){
+    .navigation.pagination .nav-links .page-numbers{
+        margin: 0 8px;
+    }
+ }
+
+ .wp-block-image img{
+     height: auto;
  }
