--- a/wp-content/themes/raro/style.css
+++ b/wp-content/themes/raro/style.css
@@ -322,3 +322,28 @@
  .privacy-policy a{
     color: #b60101;
  }
+
+ /* Go up btn */
+
+ .go-up{
+    right: 50px;
+    bottom: 30px;
+    display: none;
+    position: fixed;
+    font-size: 65px;
+ }
+
+ .go-up .fa{
+    color: #b60101;
+    text-shadow: 2px 2px 2px #000;
+    text-shadow: 3px 4px 10px #000;
+ }
+
+ @media screen and (max-width: 992px){
+    .go-up{
+        right: 10px;
+        bottom: 0px;
+        font-size: 40px;
+    }
+ }
+
