--- a/wp-content/themes/raro/style.css
+++ b/wp-content/themes/raro/style.css
@@ -223,16 +223,37 @@
  }
 
  .modal-container .service-modal .row{
-     width: 100%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+ }
+
+ @media screen and (max-width: 992px){
+    .modal-container .service-modal .row{
+        flex-direction: column;
+    }
  }
 
  .modal-container .service-modal .blog-thumbnail{
-     padding: 0;
+    padding: 0;
  }
 
- .modal-container .service-modal .blog-thumbnail  .blog-thumbnail-img{
-    height: 200px;
-    overflow: hidden;
+ .modal-container .service-modal .blog-thumbnail img{
+     height: 100%;
+ }
+
+ .modal-container .service-modal .blog-info{
+    flex: 1;
+    display: flex;
+    justify-items: center;
+    flex-direction: column;
+    justify-content: center;
+ }
+
+ @media screen and (max-width: 992px){
+    .modal-container .service-modal .blog-thumbnail img{
+        height: auto;
+    }
  }
 
  .modal-container .service-modal .close-btn{
@@ -337,7 +358,7 @@
  /* Go up btn */
 
  .go-up{
-    left: 50px;
+    right: 50px;
     z-index: 9;
     bottom: 3px;
     display: none;
@@ -347,7 +368,7 @@
 
  @media screen and (max-width: 992px){
     .go-up{
-        left: 20px;
+        right: 20px;
         bottom: 0;
         font-size: 40px;
     }
