--- a/wp-content/themes/raro/style.css
+++ b/wp-content/themes/raro/style.css
@@ -168,8 +168,8 @@
  #services .project figcaption .project-category-container .project-category{
      bottom: 0;
      margin: 0;
+     width: 600px;
      font-size: 23px;
-     text-align: center;
      letter-spacing: 6px;
      left: calc(63.5px - 15.5px);
      font-family: 'Poppins-Bold';
@@ -250,9 +250,31 @@
     justify-content: center;
  }
 
+ @media screen and (min-width: 992px) and (max-width: 1600px){
+    .modal-container .service-modal .blog-info{
+        padding: 3.3em 2em 3.3em .5em;
+    }
+ }
+
+ @media screen and (max-width: 992px){
+    .modal-container .service-modal .blog-info{
+        padding: 0 1em 3.3em 1em;
+    }
+ }
+
  @media screen and (max-width: 992px){
     .modal-container .service-modal .blog-thumbnail img{
         height: auto;
+    }
+ }
+
+ @media screen and (min-width: 992px) and (max-width: 1600px){
+    .modal-container .service-modal .blog-info .blog-title{
+        font-size: 1.2em;
+    }
+
+    .modal-container .service-modal .blog-info p{
+        font-size: 14px;
     }
  }
 
